Bumped to JDK11 and updated the Android comandline tools.